[package]
name = "mdbook-split"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
clap = "4.4.0"
mdbook = { version = "0.4.34", default-features = false }
pulldown-cmark = "0.9.3"
pulldown-cmark-to-cmark = "11.0.0"
rand = "0.8.5"
semver = "1.0.18"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
